# 1c-buddy-mcp

./: .gitignore  README.md  pyproject.toml
docs/: UPDATING_FROM_UPSTREAM.md
docs/superpowers/plans/: 2026-06-19-tool-limitations.md
docs/superpowers/specs/: 2026-06-19-tool-limitations-design.md
src/onec_buddy_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  limitations.py  models.py  server.py  service.py  text.py
tests/: test_client.py  test_config.py  test_live.py  test_server.py  test_service.py
